fix mobile off screen issue

--- a/styles.scss
+++ b/styles.scss
@@ -19,6 +19,7 @@ html {
     width: 100vw;
     font-family: Arial, Helvetica, sans-serif;
     overflow-y: hidden;
+    overflow-x: hidden;
 };
 
 body {
@@ -38,6 +39,8 @@ body {
     display: grid;
     grid-template-columns: 80px auto;
     height: 93%;
+    overflow-x: hidden;
+    overflow-y: hidden;
 
     .sidebar {
         background-color: black;
